MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/signature__Google_Template__c.object-meta.xml
<CustomObject>
    <description>Simple Signature Document Templates (Google Docs or Visualforce)</description>
    <label>ß Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ß Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>