MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__DocumentPlatform__c.field-meta.xml
<CustomField>
    <fullName>signature__DocumentPlatform__c</fullName>
    <label>Document Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Docs</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>