MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__Domain__c.field-meta.xml
<CustomField>
    <fullName>signature__Domain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>