MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>signature__Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>