MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__Google_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>signature__Google_Doc_Id__c</fullName>
    <label>Google Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>