MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>signature__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>