MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__Permission_Role__c.field-meta.xml
<CustomField>
    <fullName>signature__Permission_Role__c</fullName>
    <label>Permission Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>