MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__PermissionType__c.field-meta.xml
<CustomField>
    <fullName>signature__PermissionType__c</fullName>
    <label>PermissionType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>