MyDemoOrg/force-app/main/default/objects/signature__Google_Template__c/fields/signature__Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>signature__Visualforce_Page__c</fullName>
    <label>Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>